
  * dh: Fix bug where "--help" or "--list" would not work
    unless "debian/compat" existed and had a supported
    compat level.  (Closes: #820508)
  * dh_compress: Gracefully handle debian (or any other
    path segment in the package "tmpdir") being a symlink
    pointing outside the same directory.  Thanks to
    Bernhard Miklautz for the report.  (Closes: #820711)

 -- Niels Thykier <niels@thykier.net>  Sat, 09 Apr 2016 09:20:32 +0000

debhelper (9.20160403) unstable; urgency=medium

  * d/control: Requre dh-autoreconf (>= 12) to ensure
    non-autotools can be built in compat 10.
  * dh: In a "PROMISE: DH NOOP" clause, make no assumptions
    about being able to skip "foo(bar)" if "foo" is not known.
  * debhelper.pod: Use DEB_HOST_ARCH instead of the incorrect
    "build architecture".  Thanks to Helmut Grohne for the
    report.
  * dh_makeshlibs: Use same regex for extracting SONAME as
    dpkg-shlibdeps.  (Closes: #509931)
  * dh_makeshlibs: Add an ldconfig trigger if there is an
    unversioned SONAME and the maintainer provides a
    symbols file.

 -- Niels Thykier <niels@thykier.net>  Sun, 03 Apr 2016 08:56:07 +0000

debhelper (9.20160402) unstable; urgency=medium

  * Remove dh_desktop.
  * dh_install: Fix a regression where a non-existing file
    was ignored if another file was matched for the same
    destination dir.  Thanks to Ben Hutchings for reporting
    the issue.  (Closes: #818834)
  * d/rules: Use overrides to disable unnecessary helpers
    (for which debhelper does not Build-Depend on the
    necessary packages to run the tools).
  * dh: Enable "autoreconf" sequence by default in compat
    10 (or higher).  (Closes: #480576)
  * d/control: Add a dependency on dh-autoreconf due to
    the above.
  * autoscripts/*-makeshlibs: Remove again.  Most of the
    reverse dependencies have migrated already.
  * Declare compat 10 ready for testing.

 -- Niels Thykier <niels@thykier.net>  Sat, 02 Apr 2016 19:20:17 +0000
