@@ -7,6 +7,12 @@ debhelper (9.20160403+unreleased) UNRELEASED; urgency=medium
     path segment in the package "tmpdir") being a symlink
     pointing outside the same directory.  Thanks to
     Bernhard Miklautz for the report.  (Closes: #820711)
+  * Dh_Lib.pm: Compat files are now mandatory.
+  * dh_clean: Remove work around for missing compat file.
+    This removes a confusing warning when the package is
+    not built by CDBS.  (Closes: #811059)
+  * debhelper.pod: Add a line stating that debian/compat
+    is mandatory.  (Closes: #805405)
 
  -- Niels Thykier <niels@thykier.net>  Sat, 09 Apr 2016 09:20:32 +0000
 
